[gd_scene load_steps=16 format=3 uid="uid://bxi3n7rn6nn7o"]

[ext_resource type="Script" path="res://Scripts/EnemySM/mob_shooter.gd" id="1_bjied"]
[ext_resource type="Material" uid="uid://budc1a0ek1y7a" path="res://Resources/Materials/blink.tres" id="2_pwmhg"]
[ext_resource type="Script" path="res://addons/finite_state_machine/scripts/finite_state_machine.gd" id="3_05e67"]
[ext_resource type="Script" path="res://Scripts/EnemySM/FollowPath.gd" id="4_2c1da"]
[ext_resource type="Script" path="res://Scripts/EnemySM/Idle.gd" id="5_uyfao"]
[ext_resource type="Script" path="res://Scripts/EnemySM/FollowTarget.gd" id="6_kj52r"]
[ext_resource type="Script" path="res://Scripts/EnemySM/ReturnToPath.gd" id="7_awuv1"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_6vhoc"]
properties/0/path = NodePath(".:global_position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:global_rotation")
properties/1/spawn = true
properties/1/replication_mode = 1

[sub_resource type="BoxShape3D" id="BoxShape3D_a01db"]
size = Vector3(0.284351, 0.613576, 0.456676)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dwkop"]
albedo_color = Color(0.186148, 0.683753, 0.732555, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_o2dea"]
material = SubResource("StandardMaterial3D_dwkop")
radius = 0.3
height = 1.5

[sub_resource type="CapsuleMesh" id="CapsuleMesh_3dr6i"]

[sub_resource type="Animation" id="Animation_acugf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node3D/MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.0279273, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node3D/MeshInstance3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -1.49012e-08, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node3D/MeshInstance3D/MeshInstance3D3:surface_material_override/0:albedo_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_se2ib"]
resource_name = "hit"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node3D/MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.109968, 0.299458),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.0279273, 0), Vector3(0, 0.0279273, 0.220936), Vector3(0, 0.0279273, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node3D/MeshInstance3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.109968, 0.298129),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, -1.49012e-08, 0), Vector3(0.261799, -1.54269e-08, -3.99276e-09), Vector3(0, -1.49012e-08, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node3D/MeshInstance3D/MeshInstance3D3:surface_material_override/0:albedo_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.154048, 0.300122),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lx67a"]
_data = {
"RESET": SubResource("Animation_acugf"),
"hit": SubResource("Animation_se2ib")
}

[node name="EnemyBody" type="CharacterBody3D" node_paths=PackedStringArray("fire_point") groups=["Enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
collision_layer = 2
script = ExtResource("1_bjied")
fire_point = NodePath("Node3D/MeshInstance3D/MeshInstance3D2/FirePoint")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_6vhoc")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Scenes/PackedScenes/towers/projectile_ennemies.tscn")
spawn_path = NodePath("..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, -1.49012e-08, 0, 1, 0, 1.49012e-08, 0, 1, 0.00116162, 0.0166396, 0.00115395)
shape = SubResource("BoxShape3D_a01db")
disabled = true

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0.0609472, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D"]
transform = Transform3D(0.3, 0, -4.47036e-09, 0, 0.3, 0, 4.47036e-09, 0, 0.3, 0, 0.0279273, 0)
mesh = SubResource("CapsuleMesh_o2dea")
skeleton = NodePath("../../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Node3D/MeshInstance3D"]
transform = Transform3D(0.494, 0, 0, 0, -8.65485e-09, -0.493, -7.36119e-09, 0.198, -2.15497e-08, 0, 0.411999, -0.152843)
mesh = SubResource("CapsuleMesh_3dr6i")
skeleton = NodePath("../../../..")

[node name="FirePoint" type="Node3D" parent="Node3D/MeshInstance3D/MeshInstance3D2"]
transform = Transform3D(0.5, -8.88178e-15, 1.48231e-21, 1.42109e-13, 0.5, -3.55271e-15, -6.14099e-21, 6.21725e-15, 0.5, 1.03047e-07, -1.88911, 0.401124)

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Node3D/MeshInstance3D"]
transform = Transform3D(1, 0, 1.49012e-08, 0, 1, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CapsuleMesh_o2dea")
skeleton = NodePath("../../../..")
surface_material_override/0 = ExtResource("2_pwmhg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lx67a")
}

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_max_distance = 3.01
height = 1.5
radius = 0.1
neighbor_distance = 2.0
max_neighbors = 3
max_speed = 0.6
debug_enabled = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource("3_05e67")

[node name="FollowPath" type="Node" parent="." node_paths=PackedStringArray("parent")]
script = ExtResource("4_2c1da")
parent = NodePath("..")

[node name="Idle" type="Node" parent="." node_paths=PackedStringArray("parent")]
script = ExtResource("5_uyfao")
parent = NodePath("..")

[node name="FollowTarget" type="Node" parent="." node_paths=PackedStringArray("parent")]
script = ExtResource("6_kj52r")
parent = NodePath("..")

[node name="ReturnToPath" type="Node" parent="." node_paths=PackedStringArray("parent")]
script = ExtResource("7_awuv1")
parent = NodePath("..")
